<resources>
    <string name="app_name">Kết nối gia sư và học viên</string>

        <string name="lich_hoc_titel">Lịch Học</string>
        <string name="khoa_hoc_title">Khóa học</string>
    <string name="ongoing_title">Đang dạy</string>
    <string name="pending_title">Mới</string>
    <string name="cancelled_title">Huỷ</string>
    <string name="completed_title">Hoàn thành</string>
    <string name="register_title">Chờ xác nhận</string>
    <string name="log_out">Đăng xuất</string>
    <string name="notification">Thông báo</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="setting">Cài đặt</string>
    <string name="payment">Thanh toán</string>
    <string name="subject">Tên môn học/ vd: Toán lớp 9</string>
    <string name="totalSessions">Số buổi học/ vd: 10 buổi</string>
    <string name="totalPrice">Tổng số tiền/ vd: 1.500.000VND</string>
    <string name="notes">Ghi chú/ vd: ôn tập vượt cấp lớp 9...</string>
    <string name="timeOfTheLesson">Giờ học cố định trong tuần/ vd: Tối thứ 2, 4, 6... </string>
    <string name="course_course">Thêm khoá học</string>

    <string name="login">Đăng nhập</string>
    <string name="close">Đóng</string>
    <string name="cancel">Huỷ</string>

    <string name="confirm">Xác nhận</string>
    <string name="status">Status</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="title">Loại: </string>
    <string name="message">Nội dung:</string>
    <string name="noti">Thông báo</string>
    <string name="chat">Nhăn tin</string>
    <string name="average_rating">Điểm đánh giá trung bình: </string>
    <string name="s131"></string>
    <string name="s141"></string>
    <string name="s11331"></string>
    <string name="s12"></string>
    <string name="s13"></string>
    <string name="s142"></string>
    <string name="s211"></string>
    <string name="s122"></string>
    <string name="s123"></string>
    <string name="s214"></string>
    <string name="s1341"></string>
    <string name="s1452"></string>
    <string name="s153"></string>
    <string name="s14"></string>


    btnAddCourse




</resources>