<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
   >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="Thêm khoá học"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtSubject"
            android:hint="@string/subject"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="text"
            android:textStyle="bold"
           android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/edit_text" />
        <EditText
            android:id="@+id/edtTotalSessions"
            android:hint="@string/totalSessions"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/edit_text" />
        <EditText
            android:id="@+id/edtTotalPrice"
            android:hint="@string/totalPrice"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="number"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/edit_text" />

        <EditText
            android:id="@+id/edtTimeOfTheLesson"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/timeOfTheLesson"
            android:inputType="textMultiLine"
            android:textStyle="bold"
            android:minLines="3"
            android:layout_marginTop="20dp"
            android:gravity="top|start"
            android:textSize="24sp"
            android:background="@android:drawable/edit_text" />

        <EditText
            android:id="@+id/edtNotes"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:textStyle="bold"
            android:minLines="4"
            android:layout_marginTop="20dp"
            android:gravity="top|start"
            android:textSize="24sp"
            android:background="@android:drawable/edit_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:padding="8dp">
        <Button
            android:id="@+id/btnAddCourse"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:text="@string/course_course"
            />
    </LinearLayout>
    </LinearLayout>


</ScrollView>


<!--    {-->
<!--    "subject": "Lập trình Java Spring Boot",-->
<!--    "totalSessions": 10,-->
<!--    "totalPrice": 1500000.00,-->
<!--    "timeOfTheLesson": "Tối thứ 2, 4, 6",-->
<!--    "startTime": "2025-11-01T19:00:00",-->
<!--    "endTime": "2025-11-01T21:00:00",-->
<!--    "startDate": "2025-11-01",-->
<!--    "endDate": "2025-12-15",-->
<!--    "status": "PENDING",-->
<!--    "notes": "Học online qua Zoom, mỗi buổi 2 tiếng"-->
<!--    }-->
