<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/Student_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="Ảnh đại diện gia sư"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"  android:text="Trịnh Xuân Thiện"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imPayment"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="12dp"
                        android:background="@drawable/icon_background_shape"
                        android:src="@drawable/ic_payment" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imSetting"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="12dp"
                        android:background="@drawable/icon_background_shape"
                        android:src="@drawable/ic_settings" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imMotification"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="4dp"
                        android:background="@drawable/icon_background_shape"
                        android:src="@drawable/ic_notification" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>


            </LinearLayout>



        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:text="SDT: "
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvSdt"
                    android:text="0889002058"
                    android:textSize="18sp"

                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="Địa chỉ: "
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvDiaChi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="Thôn 5 xã cư ni huyện eakar"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="Ngày sinh: "
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvNgaySinh"
                    android:text="2044/2/2"
                    android:textSize="18sp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="Khái quát trình độ: "
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvBio"
                    android:text="từng lười học"
                    android:textSize="18sp"

                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="Lớp: "
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvKinhNghiem"
                    android:text="8"
                    android:textSize="18sp"

                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/tvLogOut"
                    android:text="@string/log_out"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"  android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/btnEditFrofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:backgroundTint="@color/blue"
                android:text="@string/edit_profile"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
